# app/api_v1/api/persons_username.py
@@ -1,14 +1,0 @@
-# -*- coding: utf-8 -*-
-from __future__ import absolute_import, print_function
-
-from flask import request, g
-
-from . import Resource
-from .. import schemas
-
-
-class PersonsUsername(Resource):
-
-    def get(self, username):
-
-        return {}, 200, None
